add update functionality

--- a/projectapi_simulation/projectapi_simulation/src/main/resources/application.properties
+++ b/projectapi_simulation/projectapi_simulation/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=projectapi_simulation
 server.port=9093
 
 #migration.initialized=false
-
+migration.completed = false
 
 
 
@@ -15,7 +15,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-#Externe Database Configuratie
+#Externe (CRM) Database Configuratie
 extern.datasource.url=jdbc:mysql://externHost:3306/crm_db
 extern.datasource.username=root
 extern.datasource.password=
